--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -11,3 +11,25 @@ services:
         build: php
         volumes_from:
             - nginx
+    mysql:
+        image: mysql:8.0
+        container_name: mysql
+        restart: unless-stopped
+        environment:
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: database
+            MYSQL_USER: user
+            MYSQL_PASSWORD: password
+        ports:
+            - "3306:3306"
+        volumes:
+            - mysql_data:/var/lib/mysql
+        networks:
+            - backend
+
+volumes:
+    mysql_data:
+
+networks:
+    backend:
+        driver: bridge
