--- a/src/composer.json
+++ b/src/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.8"
+        "laravel/scout": "^10.14",
+        "laravel/tinker": "^2.8",
+        "meilisearch/meilisearch-php": "^1.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
